Code cleanup #1 - Change / remove outdated and/or unrecommended syntax - Bypass local multiplayer standstill (website is down), locked to current version - Removed *most* unused imports and variables